# my_cli

./: Cargo.toml  LICENSE  README.md  test.list  test.list.bi
src/: lib.rs
