[package]
name = "my_cli"
version = "0.1.1"
edition = "2021"
authors = ["Marcos V. Andrade Almeida"]
license = "MIT"
description = "A simple cli library inspired by Clap builder."
readme = "README.md"
repository = "https://github.com/MarcosAndradeV/my_cli"
keywords = ["cli", "simple"]
exclude = ["bin/test.rs"]


[dependencies]

[[bin]]
name = "test"
path = "bin/test.rs"
